# viberesp

./: .gitignore  BC 8NDL51 infinite baffle - CORRECTED PARAMETERS  BC_8NDL51 infinite baffle - REGENERATED  CLAUDE.md  PORTED_BOX_IMPEDANCE_FIX_STATUS.md  README.md  REWRITE_NOTES.md  ROADMAP.md  compare_ported_validation.py  debug_small_calc.py  hornresp_format_analysis.md  ported_box_impedance_bug.md  pyproject.toml  run_ported_validation_simulations.py  sealed_box_spl_investigation.md  sealed_box_spl_research_summary.md  test_small_impedance.py  validate_hornresp_15ds115.py
docs/: QL_PARAMETER_GUIDE.md  bc_de250_parameters.md  hornresp_export_guide.md  lr4_implementation_summary.md  mixed_profile_horn_feature.md  spl_response_implementation.md  two_way_design_workflow.md  visualization_module_summary.md
exports/: BC15DS115_B4_HORNRESP_EXPORT.md  BC_12NDL76.txt  BC_15DS115.txt  BC_18PZW100.txt  BC_8NDL51.txt  README.md  bc15ds115_bass_horn_designs.json  hornresp_params.txt  tc2_multiseg_opt_20251228_174155.json
imports/: README.md
literature/: README.md
planning/: README.md  hornresp_format_reference.md  implementation_quick_reference.md
scripts/: generate_ported_box_validation_data.py  generate_sealed_box_validation.py  migrate_validation_data.py  validate_ported_box.py  validate_ported_box_quick.py
tasks/: BASS_EXTENSION_OPTIMIZATION_SUMMARY.md  BC15DS115_180L_29Hz_compromise.txt  BC15DS115_254L_33Hz_B4.txt  BC15DS115_300L_27Hz_optimal.txt  BC15DS115_IMPROVED_MODEL_COMPARISON.md  BC15DS115_OPTIMIZATION_RESULTS.md  BC21DS115_f3_34hz_hyperbolic_results.txt  BC21DS115_f3_vs_length_tradeoff.txt  BC21DS115_folded_45x30x22p5_results.txt  BC21DS115_hyperbolic_analysis.txt  BC21DS115_large_bass_horn_summary.txt  BC_15DS115_multisegment_horn_20251231_155910.json  CLEANUP_PLAN.md  HORN_OPTIMIZATION_HANDOFF.md  IMPLEMENT_I_ACTIVE_MODEL.md  IMPLEMENT_SPL_CALIBRATION_FIX.md  OPTIMIZER_UPDATE_SUMMARY.md  README.md  SPL_CALIBRATION_INSTRUCTIONS.md  acoustic_power_fix_summary.md  agent_instructions_spl_transfer_function.md  agent_instructions_update_optimizer.md  analyze_bass_offset.py  analyze_flatness_results.py  analyze_horn_parameter_sweeps.py  analyze_hyperbolic_f3_potential.py  apply_spl_calibration.py  baffle_step_implementation_plan.md  bc15ds115_b4_alignment.txt  bc15ds115_flatness_results.txt  bc15ds115_hornresp_validation_corrected.md  bc15ds115_size_vs_f3_results.txt  (+95 more)
tests/: __init__.py  (+3 more)
(+596 files in other folders)
